--- a/src/components/Navigation/index.css
+++ b/src/components/Navigation/index.css
@@ -6,12 +6,17 @@ nav {
   display: flex;
   justify-content: space-around;
   backdrop-filter: blur(3px);
-  height: 2.2em;
+  font-size: 1em;
+  padding: 5px 0;
+  /* height: 2.3em; */
   align-items: center;
   box-shadow: 0px 0px 6px hsla(41, 80%, 40%, 0.5);
   background-color: hsla(41, 100%, 70%, 0.4);
-  font-size: 1.5em;
   font-weight: bold;
+}
+
+html:lang(he) .nav-element {
+  font-size: 1.3em;
 }
 
 #lang-menu {
